--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.username=${DATASOURCE_USERNAME}
-spring.datasource.password=${DATASOURCE_PASSWORD}
-
-# spring.datasource.url=jdbc:mysql://containers-us-west-145.railway.app:6867/eshop
-# spring.datasource.username=root
+# spring.datasource.url=${DATASOURCE_URL}
+# spring.datasource.username=${DATASOURCE_USERNAME}
 # spring.datasource.password=${DATASOURCE_PASSWORD}
+
+spring.datasource.url=jdbc:mysql://containers-us-west-145.railway.app:6867/eshop
+spring.datasource.username=root
+spring.datasource.password=${DATASOURCE_PASSWORD}
